--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -52,3 +52,21 @@
     margin-top 10px
     background url("../img/rate5.png") no-repeat center
 
+  &--blue-square
+    position relative
+    height 83px
+    width 83px
+    margin-bottom 35px
+    text-align center
+    background url("../img/rectangle-blue.png") no-repeat center
+
+  &--ligthinig-blue
+    position absolute
+    top 20px
+    left 30px
+    height 38px
+    width 21px
+    vertical-align middle
+    background url("../img/lightning-blue.png") no-repeat center
+
+
