--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -84,6 +84,9 @@
   //Элемент для информации
   &__info
 
+    &--block
+      display block
+
     &--med-text
       font-size 20px
       font-weight 600
@@ -107,11 +110,28 @@
       font-weight 900
       font-family Montserrat, sans-serif
 
+    &--norm-text
+      font-size 14px
+      font-weight 700
+      font-family Montserrat, sans-serif
+
     &--black-text
       color #363636
 
     &--white-text
       color #ffffff
+
+    &--grey-text
+      color #a0a0a0
+
+    &--dark-grey-text
+      color #707070
+
+    &--letter-spacing035
+      letter-spacing .35px
+
+    &--letter-spacing047
+      letter-spacing .47px
 
   //Элемент info-wrap
   &__info-wrap
