--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -88,3 +88,10 @@ div.main.main_theme-white-gr
             div.unit__horiz-inline-center-wrap
                 hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
                 hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--inline
+
+        div.unit.unit--white
+            div.icon.icon--blue-square
+                div.icon.icon--ligthinig-blue
+
+            span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 55 000
+            span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Expert Witness
