--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -92,6 +92,11 @@ div.main.main_theme-white-gr
         div.unit.unit--white
             div.icon.icon--blue-square
                 div.icon.icon--ligthinig-blue
-
             span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 55 000
             span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Expert Witness
+
+        div.unit
+            div.icon.icon--blue-square
+                div.icon.icon--raindrop
+            span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 124 600
+            span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Construction
