--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -60,6 +60,12 @@
       width 155px
       color #363636
 
+    &--white-text
+      color #ffffff
+
+    &--letter-spacing018
+      letter-spacing .18px
+
   //Элемент горизонтальной линии
   &__horizontal
     width 34px
@@ -68,6 +74,9 @@
 
     &--black-solid
       border solid #363636
+
+    &--white-solid
+      border solid #ffffff
 
     &--width-small
       width 21px
@@ -127,6 +136,10 @@
     &--dark-grey-text
       color #707070
 
+    &--white-blue-text
+      color #ffffff
+      opacity .5
+
     &--letter-spacing035
       letter-spacing .35px
 
@@ -161,6 +174,9 @@
   &__horiz-inline-center-wrap
     font-size 0
     text-align center
+
+  &__horiz-inline-wrap
+    font-size 0
 
   //Элемент article
   &__article
