--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -100,3 +100,14 @@ div.main.main_theme-white-gr
                 div.icon.icon--raindrop
             span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 124 600
             span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Construction
+
+        div.unit.unit--theme-blue
+            h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--white-text News
+            p.unit__info.unit__info--norm-text.unit__info--white-blue-text 12 february, 2015
+            h3.unit__title.unit__title--bold.unit__title--white-text Project Design and Engineering Services
+            p.unit__info.unit__info--norm-text.unit__info--white-blue-text 23 comments
+            div.unit__horiz-inline-wrap
+                hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--inline
+                hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
+                hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
+
