В home_page добавлен информационный блок c avatar райтингом на белом фоне. Временно отключен header

--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -111,3 +111,10 @@ div.main.main_theme-white-gr
                 hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
                 hr.unit__horizontal.unit__horizontal--white-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
 
+        div.unit.unit--white
+            div.unit__person-info-wrap
+                div.icon.icon--person-avatar
+                span.unit__info.unit__info--norm-bold-text.unit__info--black-text David Mc. Adams
+                div.icon.icon--person-rate4
+
+            p.unit__article.unit__article--text-ind.unit__article--centered-text.unit__article--theme-unit-black-text.unit__article--gray-text In most urban areas, construction has already built existing structures, many having been standing for decades.
