В home_page добавлен информационный блок c синей иконкой settig-tool. Временно отключен header

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -769,3 +769,11 @@ __submit_theme-aside-submit {
   width: 21px;
   background: url("../img/raindrop.png") no-repeat center;
 }
+.icon--setting-tool-blue {
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  height: 34px;
+  width: 34px;
+  background: url("../img/setting-tool-blue.png") no-repeat center;
+}
