--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -76,4 +76,10 @@
     width 21px
     background url("../img/raindrop.png") no-repeat center
 
-
+  &--setting-tool-blue
+    position absolute
+    top 25px
+    left 25px
+    height 34px
+    width 34px
+    background url("../img/setting-tool-blue.png") no-repeat center
