--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -118,3 +118,9 @@ div.main.main_theme-white-gr
                 div.icon.icon--person-rate4
 
             p.unit__article.unit__article--text-ind.unit__article--centered-text.unit__article--theme-unit-black-text.unit__article--gray-text In most urban areas, construction has already built existing structures, many having been standing for decades.
+
+        div.unit
+            div.icon.icon--blue-square
+                div.icon.icon--setting-tool-blue
+            span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 18 000
+            span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Procurement
