В home_page добавлен информационный блок c синей иконкой light-bolb. Временно отключен header

--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -83,3 +83,11 @@
     height 34px
     width 34px
     background url("../img/setting-tool-blue.png") no-repeat center
+
+  &--light-bulb
+    position absolute
+    top 25px
+    left 30px
+    height 34px
+    width 23px
+    background url("../img/light-bulb.png") no-repeat center
