--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -124,3 +124,9 @@ div.main.main_theme-white-gr
                 div.icon.icon--setting-tool-blue
             span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 18 000
             span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Procurement
+
+        div.unit.unit--white
+            div.icon.icon--blue-square
+                div.icon.icon--light-bulb
+            span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 78 150
+            span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Project Managments
