--- a/app/css/main.css
+++ b/app/css/main.css
@@ -777,3 +777,11 @@ __submit_theme-aside-submit {
   width: 34px;
   background: url("../img/setting-tool-blue.png") no-repeat center;
 }
+.icon--light-bulb {
+  position: absolute;
+  top: 25px;
+  left: 30px;
+  height: 34px;
+  width: 23px;
+  background: url("../img/light-bulb.png") no-repeat center;
+}
