В home_page добавлен информационный блок c иконкой icon-star на желтом фоне. Временно отключен header

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -785,3 +785,8 @@ __submit_theme-aside-submit {
   width: 23px;
   background: url("../img/light-bulb.png") no-repeat center;
 }
+.icon--icon-stars {
+  height: 73px;
+  margin-bottom: 17px;
+  background: url("../img/icon-star.png") no-repeat center;
+}
