--- a/app/stylus/blocks/icon/icon.styl
+++ b/app/stylus/blocks/icon/icon.styl
@@ -91,3 +91,8 @@
     height 34px
     width 23px
     background url("../img/light-bulb.png") no-repeat center
+
+  &--icon-stars
+    height 73px
+    margin-bottom 17px
+    background url("../img/icon-star.png") no-repeat center
