--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -130,3 +130,8 @@ div.main.main_theme-white-gr
                 div.icon.icon--light-bulb
             span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 78 150
             span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Project Managments
+
+        div.unit.unit--theme-yellow
+            div.unit__download-price-wrap
+                div.icon.icon--icon-stars
+                span.unit__info.unit__info--small-text.unit__info--black-text Work with us
