--- a/app/stylus/blocks/form/form.styl
+++ b/app/stylus/blocks/form/form.styl
@@ -18,6 +18,16 @@
     &--border-white
       border-color #ffffff
 
+    &--theme-unit-search-white
+      width 100%
+      padding 13px 7px
+      box-sizing border-box
+      font-family Montserrat, sans-serif;
+      font-size 14px
+      font-weight 600
+      color #59a9d6
+      background-color white
+
   &__button
     &--theme-search-button
       border none
@@ -31,3 +41,26 @@
   &__button-icon
     font-size 20px
     color #ffffff
+
+  //Элемент submit
+  &__submit
+
+    &--small-text
+      font-family Montserrat, sans-serif;
+      font-size 12px
+      font-weight 600
+      text-transform uppercase
+
+    &--white-text
+      color #ffffff
+
+    &--theme-link-submit
+      float right
+      margin-top 30px
+      border none
+      background-color #2297d8
+
+  &::after
+    content ""
+    display table
+    clear both
