--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -178,6 +178,11 @@
   &__horiz-inline-wrap
     font-size 0
 
+  //Размещение формы в unit aside
+  &__inner-form-aside
+    position relative
+    bottom -52px
+
   //Элемент article
   &__article
     font-size 14px
