--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -135,3 +135,20 @@ div.main.main_theme-white-gr
             div.unit__download-price-wrap
                 div.icon.icon--icon-stars
                 span.unit__info.unit__info--small-text.unit__info--black-text Work with us
+
+        div.unit.unit--theme-info
+            input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")
+
+            div.unit__info-wrap
+                span.unit__info.unit__info--big-text.unit__info--black-text 01
+                    sup.unit__info.unit__info--med-text.unit__info--black-text /09
+
+            input.button.button--theme-arrow.button--arrow-prev.button--white-bg.unit__button-center(type="button", value="")
+
+        div.unit.unit--theme-blue
+            h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--white-text subscribe
+            hr.unit__horizontal.unit__horizontal--white-solid
+            div.unit__inner-form-aside
+                form.form
+                    input.form__input.form__input--theme-unit-search-white(type="text", name="email", value="E-mail")
+                    input.form__submit.form__submit--theme-link-submit.form__submit--small-text.form__submit--white-text(type="submit", value="sign up")
