--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -30,3 +30,6 @@
 
   &--arrow-prev
     background url("../img/arr-prev.png") no-repeat center
+
+  &--arrow-prev-hover
+    background url("../img/arr-prev-hover.png") no-repeat center
