--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -7,6 +7,8 @@ div.main.main_theme-white-gr
             p.unit__article.unit__article--theme-unit-black-text Still other clients have reserved for capital improvement projects and will work directly with our Design and Engineering team.
             input.button.button--theme-unit-btn.button--black-bg.button--text-white.unit__button-buttom-left(type="button", value="Read more")
 
+        div.unit
+
         div.unit.unit--theme-info
             input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")
 
@@ -16,12 +18,18 @@ div.main.main_theme-white-gr
 
             input.button.button--theme-arrow.button--arrow-prev.button--white-bg.unit__button-center(type="button", value="")
 
+        div.unit
+
+        div.unit
+
         div.unit.unit--theme-company-video.unit--theme-blue
             div.unit__company-video-wrap
                 button.icon.icon--theme-circle.icon--blue-bg
                     div.icon.icon--theme-play-arrow
 
                 span.unit__info.unit__info--small-text.unit__info--white-text Company video
+
+        div.unit
 
         div.unit.unit--theme-info
             h2.unit__title.unit__title--big-bold.unit__title--text-width Our services
@@ -34,6 +42,18 @@ div.main.main_theme-white-gr
             h3.unit__title.unit__title--bold.unit__title--text-width General Contracting
             hr.unit__horizontal.unit__horizontal--black-solid
             p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+
+        div.unit
+
+        div.unit.unit--theme-info
+            input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")
+
+            div.unit__info-wrap
+                span.unit__info.unit__info--big-text.unit__info--black-text 03
+                    sup.unit__info.unit__info--med-text.unit__info--black-text /06
+
+            input.button.button--theme-arrow.button--arrow-prev-hover.button--white-bg.unit__button-center(type="button", value="")
+
 
         div.unit.unit--white
             h2.unit__title.unit__title--bold.unit__title--text-width Project design and engineering
