--- a/app/stylus/blocks/button/button.styl
+++ b/app/stylus/blocks/button/button.styl
@@ -11,6 +11,9 @@
   &--text-white
     color #ffffff
 
+  &--text-black
+    color #363636
+
   &--black-bg
     background-color #363636
 
@@ -19,6 +22,9 @@
 
   &--white-bg
     background-color #ffffff
+
+  &--yellow-bg
+    background-color #ffe400
 
   &--theme-arrow
     width 30px
