--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -7,6 +7,10 @@
   &--horizontal-double-unit
     width 526px
 
+  //Блок вытянутый по вертикали в два раза
+  &--vertical-double-unit
+    height 526px
+
   //Размещать блоки в ряды
   &--inline
     display inline-block
@@ -51,6 +55,9 @@
       font-weight 700
       font-family Montserrat, sans-serif;
       text-transform uppercase
+
+    &--uppercase-disabled
+      text-transform none
 
     &--theme-unit-black-title
       width 294px
