--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -172,3 +172,10 @@ div.main.main_theme-white-gr
                 form.form
                     input.form__input.form__input--theme-unit-search-white(type="text", name="email", value="E-mail")
                     input.form__submit.form__submit--theme-link-submit.form__submit--small-text.form__submit--white-text(type="submit", value="sign up")
+
+        div.unit.unit--vertical-double-unit.unit--white
+            h2.unit__title.unit__title--big-bold.unit__title--uppercase-disabled.unit__title--text-width Contemporary Villa
+            hr.unit__horizontal.unit__horizontal--black-solid
+            p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.
+            p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From
+            input.button.button--theme-unit-btn.button--yellow-bg.button--text-black.unit__button-buttom-left(type="button", value="view project")
