--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -1,4 +1,4 @@
-div.main.main_theme-white-gr
+div.main.main--theme-white-gr
     // Контент для тела сайта
     div.main__content.main__content-inner.main__content_theme-grey
         div.unit.unit--horizontal-double-unit.unit--theme-yellow
