Контент для main обернут во flex. подключен header

--- a/app/stylus/blocks/main/main.styl
+++ b/app/stylus/blocks/main/main.styl
@@ -10,6 +10,10 @@
     &_theme-grey
       background-color #d6d6d6
 
+  &__content-flex-wrap
+    display flex
+    flex-wrap wrap
+
   // Нахождение контента внутри
   &__content-inner
     margin-left auto
