--- a/app/css/main.css
+++ b/app/css/main.css
@@ -174,6 +174,10 @@ body {
 .main__content_theme-grey {
   background-color: #d6d6d6;
 }
+.main__content-flex-wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
 .main__content-inner {
   margin-left: auto;
   margin-right: auto;
