--- a/app/stylus/blocks/main/main.styl
+++ b/app/stylus/blocks/main/main.styl
@@ -5,6 +5,7 @@
 
   //Элемент для размещения контента
   &__content
+    position relative
     width 1172px
     min-height 450px
     &_theme-grey
