--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -16,8 +16,14 @@ body
     &_theme-gray
       background-color #d6d6d6
 
+    &--theme-dark-grey
+      background-color #36383b
+
     &--height-home-page
       min-height 826px
+
+    &--part-right
+      margin-left 50%
 
   //Элемент шапки для контента
   &__content
@@ -80,23 +86,6 @@ body
 
 /*====================Блок лого=================*/
 @import "blocks/logo/logo.styl"
-//.logo
-//  width 83px
-//  height 83px
-//  background url("../img/layer-logo.png") no-repeat
-//  &__text
-//    color white
-//    font-family Montserrat, sans-serif;
-//    font-size 28px
-//    font-weight 700
-//    text-transform uppercase
-//    text-decoration none
-//    &_middle-right-place
-//      display block
-//      position relative
-//      top 26px
-//      left 21px
-
 
 /*====================Блок меню==================*/
 .menu
