--- a/app/views/header/home-page-header.pug
+++ b/app/views/header/home-page-header.pug
@@ -1,6 +1,7 @@
 header.header.header--theme-home-page
     // Фон для шапки сайта
     div.header__bg.header__bg-inner.header__bg_theme-gray.header__bg--height-home-page
+    div.header__bg.header__bg-inner.header__bg--theme-dark-grey.header__bg--height-home-page.header__bg--part-right
     // Контент для шапки
     div.header__content.header__content-inner
         //Фон в контенте шапки
