--- a/app/stylus/blocks/main/main.styl
+++ b/app/stylus/blocks/main/main.styl
@@ -11,6 +11,9 @@
     &_theme-grey
       background-color #d6d6d6
 
+    &--theme-transparent
+      background-color transparent
+
   &__content-flex-wrap
     display flex
     flex-wrap wrap
