--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -1,6 +1,6 @@
 div.main.main--theme-white-gr
     // Контент для тела сайта
-    div.main__content.main__content-inner.main__content_theme-grey
+    div.main__content.main__content-inner.main__content--theme-transparent
 
         div.main__content-flex-wrap
 
@@ -46,7 +46,7 @@ div.main.main--theme-white-gr
                 hr.unit__horizontal.unit__horizontal--black-solid
                 p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
 
-            div.unit
+            div.unit.unit--theme-foto
 
             div.unit.unit--theme-info
                 input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")
