Добавлен шаблон для страницы our-service. Добавлен новый модификатор для unit, который используется для установки нестандартного фона unit

--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -15,6 +15,18 @@
   &--inline
     display inline-block
 
+  &--bg-layer-unit
+    position relative
+    height auto
+    width auto
+    padding 0
+
+  &--bg-unit-width900
+    position absolute
+    height 293px
+    width 900px
+    padding 0
+
   //Блок в котором будет размещаться текст на белом фоне
   &--theme-info
     background-color #ffffff
