--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -15,16 +15,18 @@
   &--inline
     display inline-block
 
+  //Слой для unit на котором можно поместить уникальный фон/фото
   &--bg-layer-unit
     position relative
     height auto
     width auto
     padding 0
 
-  &--bg-unit-width900
+  //Уникальный слой для unit для размещения фонового изображения
+  &--bg-unit-width959
     position absolute
     height 293px
-    width 900px
+    width 959px
     padding 0
 
   //Блок в котором будет размещаться текст на белом фоне
@@ -46,6 +48,9 @@
 
   &--soft-gold
     background-color #fcf3d3
+
+  &--dark-grey
+    background-color #36383b
 
   &--transparent
     background-color transparent
