--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -81,7 +81,7 @@ div.main.main--theme-white-gr
                     span.unit__info.unit__info--small-text.unit__info--white-text Contact us
 
             div.unit.unit--bg-layer-unit
-                div.unit.unit--bg-unit-width900.unit--theme-foto
+                div.unit.unit--bg-unit-width959.unit--dark-grey
                 div.unit.unit--horizontal-double-unit.unit--transparent
                     div.unit__form-search-wrap
                         form.form
