--- a/app/css/main.css
+++ b/app/css/main.css
@@ -155,12 +155,13 @@ body {
 .menu__icon-super_theme-text {
   color: #363636;
   font-family: Montserrat, sans-serif;
-  font-size: 12px;
-  font-weight: 400;
+  font-size: 11px;
+  font-weight: 600;
+  vertical-align: super;
 }
 .menu__icon-super_theme-sq-yellow {
   width: 21px;
-  height: 16px;
+  height: 15px;
   text-align: center;
   background-color: #ffe400;
 }
