--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -134,12 +134,13 @@ body
     &_theme-text
       color #363636
       font-family Montserrat, sans-serif;
-      font-size 12px
-      font-weight 400
+      font-size 11px
+      font-weight 600
+      vertical-align super
 
     &_theme-sq-yellow
       width 21px
-      height 16px
+      height 15px
       text-align center
       background-color #ffe400
 
