подкорректированы отсупы в блоках со стрелочками

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -377,7 +377,7 @@ body {
 }
 .unit__info-wrap {
   display: block;
-  margin: 40px 0;
+  margin: 45px 0 35px;
   text-align: center;
 }
 .unit__company-video-wrap {
