--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -173,7 +173,7 @@
   //Элемент info-wrap
   &__info-wrap
     display block
-    margin 40px 0
+    margin 45px 0 35px
     text-align center
 
   &__company-video-wrap
