--- a/app/stylus/blocks/unit/unit.styl
+++ b/app/stylus/blocks/unit/unit.styl
@@ -11,6 +11,20 @@
   &--vertical-double-unit
     height 526px
 
+  //Большой 586*586
+  &--big-bg-layer-unit
+    position relative
+    width 586px
+    height 586px
+    padding 0
+
+  //Вертикальный 293*586
+  &--vertical-double-bg-layer-unit
+    position relative
+    width 293px
+    height 586px
+    padding 0
+
   //Размещать блоки в ряды
   &--inline
     display inline-block
@@ -201,6 +215,11 @@
 
   &__horiz-inline-wrap
     font-size 0
+
+  &__bottom-right-unit-wrap
+    position absolute
+    bottom 0
+    right 0
 
   //Размещение формы в unit aside
   &__inner-form-aside
