--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -156,31 +156,35 @@ div.main.main--theme-white-gr
                 span.unit__info.unit__info--block.unit__info--big-text.unit__info--dark-grey-text 78 150
                 span.unit__info.unit__info--block.unit__info--norm-text.unit__info--grey-text.unit__info--letter-spacing035 Project Managments
 
-            div.unit.unit--theme-yellow
-                div.unit__download-price-wrap
-                    div.icon.icon--icon-stars
-                    span.unit__info.unit__info--small-text.unit__info--black-text Work with us
+            div.unit.unit--vertical-double-unit.unit--white
+                h2.unit__title.unit__title--big-bold.unit__title--uppercase-disabled.unit__title--text-width Contemporary Villa
+                hr.unit__horizontal.unit__horizontal--black-solid
+                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.
+                p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From
+                input.button.button--theme-unit-btn.button--yellow-bg.button--text-black.unit__button-buttom-left(type="button", value="view project")
 
-            div.unit.unit--theme-info
-                input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")
+            div.unit.unit--big-bg-layer-unit.unit--transparent
+                div.unit__bottom-right-unit-wrap
+                    div.unit.unit--theme-info
+                        input.button.button--theme-arrow.button--arrow-next.button--white-bg.unit__button-center(type="button", value="")
 
-                div.unit__info-wrap
-                    span.unit__info.unit__info--big-text.unit__info--black-text 01
-                        sup.unit__info.unit__info--med-text.unit__info--black-text /09
+                        div.unit__info-wrap
+                            span.unit__info.unit__info--big-text.unit__info--black-text 01
+                                sup.unit__info.unit__info--med-text.unit__info--black-text /09
 
-                input.button.button--theme-arrow.button--arrow-prev.button--white-bg.unit__button-center(type="button", value="")
+                        input.button.button--theme-arrow.button--arrow-prev.button--white-bg.unit__button-center(type="button", value="")
 
-            div.unit.unit--theme-blue
-                h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--white-text subscribe
-                hr.unit__horizontal.unit__horizontal--white-solid
-                div.unit__inner-form-aside
-                    form.form
-                        input.form__input.form__input--theme-unit-search-white(type="text", name="email", value="E-mail")
-                        input.form__submit.form__submit--theme-link-submit.form__submit--small-text.form__submit--white-text(type="submit", value="sign up")
+            div.unit.unit--vertical-double-bg-layer-unit
+                div.unit.unit--theme-yellow
+                    div.unit__download-price-wrap
+                        div.icon.icon--icon-stars
+                        span.unit__info.unit__info--small-text.unit__info--black-text Work with us
 
-        div.unit.unit--vertical-double-unit.unit--white
-            h2.unit__title.unit__title--big-bold.unit__title--uppercase-disabled.unit__title--text-width Contemporary Villa
-            hr.unit__horizontal.unit__horizontal--black-solid
-            p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text Diversity is a buzzword often heard by brand managers, business tycoons, politicians, and more; but it's much more than that. To us at DM Construction, diversity is the name of the game.
-            p.unit__article.unit__article--theme-unit-black-text.unit__article--gray-text We offer a diverse set of skills to all clients in all fields, but also offer a diverse group of individuals who are able to deliver those skills. From
-            input.button.button--theme-unit-btn.button--yellow-bg.button--text-black.unit__button-buttom-left(type="button", value="view project")
+
+                div.unit.unit--theme-blue
+                    h2.unit__title.unit__title--big-bold.unit__title--letter-spacing018.unit__title--white-text subscribe
+                    hr.unit__horizontal.unit__horizontal--white-solid
+                    div.unit__inner-form-aside
+                        form.form
+                            input.form__input.form__input--theme-unit-search-white(type="text", name="email", value="E-mail")
+                            input.form__submit.form__submit--theme-link-submit.form__submit--small-text.form__submit--white-text(type="submit", value="sign up")
