Подключение страницы our services как ссылка с главной страницы

--- a/app/views/footer/footer.pug
+++ b/app/views/footer/footer.pug
@@ -8,7 +8,7 @@ footer.footer.footer_theme-white-grey
             div.menu.footer__container__menu-inner
                 ul.menu__items
                     li.menu__item
-                        a.menu__item_text.footer_theme-text-menu(href="#") Services
+                        a.menu__item_text.footer_theme-text-menu(href="our-services.html", target="blank") Services
                     li.menu__item
                         a.menu__item_text.footer_theme-text-menu(href="#") OurWorks
                     li.menu__item
