--- a/app/views/header/header.pug
+++ b/app/views/header/header.pug
@@ -9,7 +9,7 @@ header.header
         div.header__container.header__content-container-inner
             // Блок для Лого
             div.logo
-                a.logo__text.logo__text_middle-right-place(href="#") fdn
+                a.logo__text.logo__text-inner(href="#") fdn
             //Блок для меню
             div.menu.content__menu
                 ul.menu__items
